# meme-coin-launchpad

./: Anchor.toml  package-lock.json
meme-token-launchpad/: Anchor.toml  Cargo.toml  README.md  package-lock.json
meme-token-launchpad/clients/js/: README.md  package.json
meme-token-launchpad/clients/js/test/: increment.test.ts
meme-token-launchpad/clients/rust/: Cargo.toml  README.md
meme-token-launchpad/clients/rust/src/: lib.rs
meme-token-launchpad/clients/rust/tests/: create.rs
meme-token-launchpad/program/: Cargo.toml  README.md  keypair.json
meme-token-launchpad/program/src/: lib.rs
meme-token-launchpad/scripts/: generate-clients.mjs
programs/coin_launchpad/: Cargo.toml
programs/coin_launchpad/src/: admin.rs  bonding_curve.rs  constants.rs  errors.rs  lib.rs  metadata.rs  migration.rs  program.rs  utils.rs
programs/coin_launchpad/src/instructions/: admin.rs  dex_allocation.rs  instruction.rs  mint_tokens.rs  ownership.rs  safe_badge.rs  swap.rs  takeover.rs  trading_fee.rs
programs/coin_launchpad/src/state/: token_metadata.rs
programs/coin_launchpad/src/states/: bonding_curve.rs  mod.rs  treasury.rs
tests/: coin_launchpad.ts
